Admin forms styled

--- a/app/views/contests/_form.html.erb
+++ b/app/views/contests/_form.html.erb
@@ -12,48 +12,71 @@
   </ul>
 </div>
 <% end %>
-
-<div class="field">
-  <%= form.label :title %>
-  <%= form.text_field :title %>
+<div class="row">
+  <div class="col-md-3">
+   <div class="form-group">
+    <%= form.label :title %>
+    <%= form.text_field :title, class: 'form-control', required: true %>
+  </div>
 </div>
-
-<div class="field">
-  <%= form.label :content %>
-  <%= form.text_area :content %>
-</div>
-
-<div class="field">
+<div class="col-md-3">
+ <div class="form-group">
   <%= form.label :prize_money %>
-  <%= form.number_field :prize_money %>
+  <%= form.text_field :prize_money, class: 'form-control', required: true %>
 </div>
-
-<div class="field">
+</div>
+<div class="col-md-3">
+ <div class="form-group">
   <%= form.label :start_date %>
-  <%= form.date_select :start_date %>
+  <%= form.date_field :start_date, class: 'form-control', required: true %>
 </div>
-
-<div class="field">
+</div>
+<div class="col-md-3">
+ <div class="form-group">
   <%= form.label :end_date %>
-  <%= form.date_select :end_date %>
+  <%= form.date_field :end_date, class: 'form-control', required: true %>
 </div>
-
-<div class="field">
-  <%= form.label :rule_id %>
-  <%= form.text_field :rule_id %>
 </div>
-
-<div class="field">
-  <%= form.label :category_id %>
-  <%= form.text_field :category_id %>
+<div class="col-md-12">
+  <div class="form-group">
+    <%= form.label :content, class: 'control-label' %>
+    <%= form.cktext_area :content,  ckeditor: { toolbar: "mini" }, class: 'form-control', required: true %>
+    <label id="contest_content-error" class="error" for="contest_content"></label>
+  </div>
 </div>
-
-<div class="field">
-  <%= form.label :deleted %>
-  <%= form.check_box :deleted %>
+<div class="col-md-3">
+  <div class="form-group">
+    <%= form.label :rule %>
+    <%= form.select :rule_id, options_for_select(Rule.where(deleted: false).order(:title).collect {|a| [a.title, a.id]}, ""), {prompt: true}, {class: "form-control", required: true } %>
+  </div>
 </div>
-
-<div class="actions">
-  <%= form.submit %>
+<div class="col-md-3">
+  <div class="form-group">
+    <%= form.label :category %>
+    <%= form.select :category_id, options_for_select(Category.where(deleted: false).order(:name).collect {|a| [a.name, a.id]}, ""), {prompt: true}, {class: "form-control", required: true } %>
+  </div>
+</div>
+<div class="col-md-12">
+  <div class="actions">
+    <%= form.submit 'Submit', class: 'btn btn-primary' %>
+  </div>
+</div>
 </div>
 <% end %>
+<script type="text/javascript">
+  $('form').validate({
+    ignore: [],
+    debug: false,
+    rules: { 
+
+      'contest[content]':{
+       required: function() 
+       {
+         CKEDITOR.instances.contest_content.updateElement();
+       },
+
+       minlength:10
+     }
+   }
+ });
+</script>
