--- a/app/views/layouts/_admin_footer.html.erb
+++ b/app/views/layouts/_admin_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="sticky mt-auto py-2 bg-dark">
+<footer class="admin-footer py-2 bg-dark">
 	<div class="container">
 		<p class="m-0 text-center text-white">Copyright &copy; EasyFables 2020</p>
 	</div>
