--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -76,3 +76,12 @@ footer.sticky{
   bottom: 0;
   z-index: 100;
 }
+label.error{
+  color: red;
+}
+.admin-footer{
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  z-index: 100;
+}
