--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -13,11 +13,8 @@
 <% end %>
 <div class="row">
   <div class="col-md-4">
-    <div class="input-group">
-
-      <div class="input-group-prepend">
-        <%= form.label :name, class: 'input-group-text' %>
-      </div>
+    <div class="form-group">
+        <%= form.label :name %>
       <%= form.text_field :name, class: 'form-control', required: true %>
     </div>
     <div class="actions mt-3">
@@ -26,3 +23,6 @@
   </div>
 </div>
 <% end %>
+<script type="text/javascript">
+  $('form').validate();
+</script>
