--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -13,23 +13,26 @@
 <% end %>
 <div class="row">
   <div class="col-md-4">
-    <div class="input-group">
-      <div class="input-group-prepend">
-        <%= form.label :name, class: 'input-group-text' %>
-      </div>
+    <div class="form-group">
+      <%= form.label :name, class: 'control-label' %>
       <%= form.text_field :name, class: 'form-control', required: true %>
     </div>
-    <div class="input-group mt-4">
-      <div class="input-group-prepend">
-        <%= form.label :country_code, class: 'input-group-text' %>
-      </div>
+  </div>
+  <div class="col-md-4">
+    <div class="form-group">
+      <%= form.label :country_code, class: 'control-label' %>
       <%= form.text_field :country_code, class: 'form-control', required: true %>
     </div>
-    <div class="actions mt-3">
+  </div>
+  <div class="col-md-12">
+    <div class="actions">
       <%= form.submit 'Submit', class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
 
 <% end %>
+<script type="text/javascript">
+  $('form').validate();
+</script>
 
