--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="row">
         <%= render "layouts/admin_sidebar" %>
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4" style="padding-bottom: 100px;">
           <%= yield %>
         </main>
       </div>
