--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -1,16 +1,6 @@
 <h2><%= @country.persisted? ? 'Edit Country' : 'New Country'%></h2>
-<%= form_with(model: country, local: true) do |form| %>
-<% if country.errors.any? %>
-<div id="error_explanation">
-  <h2><%= pluralize(country.errors.count, "error") %> prohibited this country from being saved:</h2>
-
-  <ul>
-    <% country.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
-    <% end %>
-  </ul>
-</div>
-<% end %>
+<%= form_with(model: country) do |form| %>
+<div id="error-explanation"></div>
 <div class="row">
   <div class="col-md-4">
     <div class="form-group">
