Action text added

--- a/app/views/contests/_form.html.erb
+++ b/app/views/contests/_form.html.erb
@@ -30,7 +30,7 @@
 <div class="col-md-12">
   <div class="form-group">
     <%= form.label :content, class: 'control-label' %>
-    <%= form.cktext_area :content,  ckeditor: { toolbar: "mini" }, class: 'form-control', required: true %>
+    <%= form.rich_text_area :content, :style => "min-height:250px;", :required => true %>
     <label id="contest_content-error" class="error" for="contest_content"></label>
   </div>
 </div>
@@ -54,19 +54,5 @@
 </div>
 <% end %>
 <script type="text/javascript">
-  $('form').validate({
-    ignore: [],
-    debug: false,
-    rules: { 
-
-      'contest[content]':{
-       required: function() 
-       {
-         CKEDITOR.instances.contest_content.updateElement();
-       },
-
-       minlength:10
-     }
-   }
- });
+  $('form').validate();
 </script>
