stories model added

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,18 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Tittle:</strong>
-  <%= @story.tittle %>
-</p>
-
-<p>
-  <strong>Written by:</strong>
-  <%= @story.written_by %>
-</p>
-
-<p>
-  <strong>Intro:</strong>
-  <%= @story.intro %>
+  <strong>Title:</strong>
+  <%= @story.title %>
 </p>
 
 <p>
@@ -21,8 +11,53 @@
 </p>
 
 <p>
+  <strong>Intro:</strong>
+  <%= @story.intro %>
+</p>
+
+<p>
+  <strong>User:</strong>
+  <%= @story.user_id %>
+</p>
+
+<p>
+  <strong>Category:</strong>
+  <%= @story.category_id %>
+</p>
+
+<p>
   <strong>Contest:</strong>
-  <%= @story.contest %>
+  <%= @story.contest_id %>
+</p>
+
+<p>
+  <strong>Status:</strong>
+  <%= @story.status %>
+</p>
+
+<p>
+  <strong>Accepted at:</strong>
+  <%= @story.accepted_at %>
+</p>
+
+<p>
+  <strong>Like:</strong>
+  <%= @story.like %>
+</p>
+
+<p>
+  <strong>Banned:</strong>
+  <%= @story.banned %>
+</p>
+
+<p>
+  <strong>Ban reason:</strong>
+  <%= @story.ban_reason %>
+</p>
+
+<p>
+  <strong>Banned at:</strong>
+  <%= @story.banned_at %>
 </p>
 
 <p>
