--- a/app/views/user_profile/user_profile.html.erb
+++ b/app/views/user_profile/user_profile.html.erb
@@ -27,7 +27,7 @@
           </div>
           </div>
           <div class="float-right">
-            <button class="btn btn-success">Write Story</button>
+            <a class="btn btn-success" href="<%= write_story_path %>">Write Story</a>
           </div>
         </div>
     </div>
