--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -4,26 +4,16 @@
       <h2><%= pluralize(story.errors.count, "error") %> prohibited this story from being saved:</h2>
 
       <ul>
-      <% story.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
+        <% story.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
       </ul>
     </div>
   <% end %>
 
   <div class="field">
-    <%= form.label :tittle %>
-    <%= form.text_field :tittle %>
-  </div>
-
-  <div class="field">
-    <%= form.label :written_by %>
-    <%= form.number_field :written_by %>
-  </div>
-
-  <div class="field">
-    <%= form.label :intro %>
-    <%= form.text_area :intro %>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
 
   <div class="field">
@@ -32,8 +22,53 @@
   </div>
 
   <div class="field">
+    <%= form.label :intro %>
+    <%= form.text_area :intro %>
+  </div>
+
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= form.text_field :user_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :category_id %>
+    <%= form.text_field :category_id %>
+  </div>
+
+  <div class="field">
     <%= form.label :contest_id %>
     <%= form.text_field :contest_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :status %>
+    <%= form.number_field :status %>
+  </div>
+
+  <div class="field">
+    <%= form.label :accepted_at %>
+    <%= form.datetime_select :accepted_at %>
+  </div>
+
+  <div class="field">
+    <%= form.label :like %>
+    <%= form.number_field :like %>
+  </div>
+
+  <div class="field">
+    <%= form.label :banned %>
+    <%= form.check_box :banned %>
+  </div>
+
+  <div class="field">
+    <%= form.label :ban_reason %>
+    <%= form.text_area :ban_reason %>
+  </div>
+
+  <div class="field">
+    <%= form.label :banned_at %>
+    <%= form.datetime_select :banned_at %>
   </div>
 
   <div class="field">
