--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <%= render "layouts/admin_footer" %>
   <% else %>
   <%= render "layouts/head_panel" %>
-  <main   style="padding-top: 70px;">
+  <main   style="padding-top: 70px;padding-bottom: 25px;">
     <%= yield %>
   </main>
   <%= render "layouts/footer" %>
