--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,82 +1,51 @@
-<%= form_with(model: story, local: true) do |form| %>
-  <% if story.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(story.errors.count, "error") %> prohibited this story from being saved:</h2>
-
-      <ul>
-        <% story.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="section-head">
+        <div class="d-flex flex-column flex-lg-row">
+          <h2 class="mr-auto"><%= @story.persisted? ? 'Edit Story' : 'New Story'%></h2>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
   </div>
-
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_area :content %>
+  <%= form_with(model: story, local: true) do |form| %>
+  <div id="error-explanation"></div>
+  <div class="row mb-4">
+    <div class="col-md-12">
+     <div class="form-group">
+      <%= form.label :title %>
+      <%= form.text_field :title, class: 'form-control', required: true %>
+    </div>
   </div>
-
-  <div class="field">
+  <div class="col-md-12">
+   <div class="form-group">
     <%= form.label :intro %>
-    <%= form.text_area :intro %>
+    <%= form.text_area :intro, class: 'form-control', required: true %>
   </div>
-
-  <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id %>
+</div>
+<div class="col-md-12">
+  <div class="form-group">
+    <%= form.label :content %>
+    <%= form.rich_text_area :content, :style => "min-height:250px;", required: true  %>
   </div>
-
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.text_field :category_id %>
+</div>
+<div class="col-md-3">
+  <div class="form-group">
+    <%= form.label :category %>
+    <%= form.select :category_id, options_for_select(Category.where(deleted: false).order(:name).collect {|a| [a.name, a.id]}, ""), {prompt: true}, {class: "form-control", required: true } %>
   </div>
-
-  <div class="field">
-    <%= form.label :contest_id %>
-    <%= form.text_field :contest_id %>
+</div>
+<div class="col-md-3">
+  <div class="form-group">
+    <%= form.label :contest %>
+    <%= form.select :contest_id, options_for_select(Contest.where(deleted: false).order(:title).collect {|a| [a.title, a.id]}, ""), {prompt: true}, {class: "form-control", required: true } %>
   </div>
-
-  <div class="field">
-    <%= form.label :status %>
-    <%= form.number_field :status %>
-  </div>
-
-  <div class="field">
-    <%= form.label :accepted_at %>
-    <%= form.datetime_select :accepted_at %>
-  </div>
-
-  <div class="field">
-    <%= form.label :like %>
-    <%= form.number_field :like %>
-  </div>
-
-  <div class="field">
-    <%= form.label :banned %>
-    <%= form.check_box :banned %>
-  </div>
-
-  <div class="field">
-    <%= form.label :ban_reason %>
-    <%= form.text_area :ban_reason %>
-  </div>
-
-  <div class="field">
-    <%= form.label :banned_at %>
-    <%= form.datetime_select :banned_at %>
-  </div>
-
-  <div class="field">
-    <%= form.label :deleted %>
-    <%= form.check_box :deleted %>
-  </div>
-
+</div>
+<div class="col-md-12">
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Submit', class: 'btn btn-primary' %>
   </div>
+</div>
+</div>
 <% end %>
+</div>
