--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,11 @@
   <% else %>
   <%= render "layouts/head_panel" %>
   <main   style="padding-top: 70px;padding-bottom: 25px;">
+    <% if !notice.blank? %>
+          <div class="container mt-4">
+          <p id="notice" class="alert alert-info"><%= notice %></p>
+        </div>
+        <% end %>
     <%= yield %>
   </main>
   <%= render "layouts/footer" %>
