--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,14 @@
+<% if user_signed_in? %>
 <%= form_with model: [commentable, Comment.new] do |form| %>
+<div id="error-explanation"></div>
   <div class="form-group">
-    <%= form.text_area :body, placeholder: "Add a comment", class: "form-control", required: true, minlength: 9 %>
+    <%= form.text_area :body, placeholder: "Add a comment", class: "form-control",required: true, minlength: 9 %>
   </div>
 
   <div class="form-group">
     <%= form.submit class: "btn btn-primary" %>
   </div>
+<% end %>
+<% else %>
+<a class="btn btn-primary" href="<%= new_user_session_path %>">Log in to comment</a>
 <% end %>
