--- a/app/views/layouts/_admin_sidebar.html.erb
+++ b/app/views/layouts/_admin_sidebar.html.erb
@@ -14,6 +14,12 @@
               Users
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link <%= (controller_name == 'admin_sections' and action_name == 'list_stories') ? 'active' : ''%>" href="<%= list_stories_path %>">
+              <span data-feather="book"></span>
+              Stories
+            </a>
+          </li>
         </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
