--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -23,6 +23,16 @@
     <div class="col-md-12">
       <p><%= @story.content %></p>
     </div>
+    <div class="col-md-12 mt-4">
+      <div class="like-container">
+        <% if current_user.present? %>
+        <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated', data: { reflex: "click->LikeReflex#toggle", id: @story.id, like_token: current_user.id }%>
+        <% else %>
+          <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated', data: { reflex: "click->LikeReflex#toggle", id: @story.id }%>
+        <% end %>
+      </div>
+      <h4 class="text-center w-100 mt-2"><i>Give Kudos!</i></h4>
+    </div>
     <div class="col-md-12">
       <h3>Comments</h3>
       <div id="comments">
