--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -27,7 +27,7 @@
         </div>
         <div class="card-footer">
     <small>Author: <%= story.user.full_name %></small>
-    <small class="float-right">Likes: 14, Comments: 0</small>
+    <small class="float-right">Likes: <span id="story-<%= story.id %>-like"><%= story.like %></span>, Comments: 0</small>
   </div>
       </div>
     </div>
