--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -26,9 +26,9 @@
     <div class="col-md-12 mt-4">
       <div class="like-container">
         <% if current_user.present? and current_user.liked?(@story.id) %>
-        <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated active', data: { reflex: "click->LikeReflex#toggle", id: @story.id }%>
+        <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1" id="story-'+@story.id.to_s+'-like">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated active', data: { reflex: "click->LikeReflex#toggle", id: @story.id }%>
         <% else %>
-          <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated', data: { reflex: "click->LikeReflex#toggle", id: @story.id }%>
+          <%= button_tag ('<i class="far fa-thumbs-up"></i><span class="like__number ml-1" id="story-'+@story.id.to_s+'-like">'+@story.like.to_s+'</span>').html_safe, type: 'button', class: 'like__btn animated', data: { reflex: "click->LikeReflex#toggle", id: @story.id }%>
         <% end %>
       </div>
       <h4 class="text-center w-100 mt-2"><i>Give Kudos!</i></h4>
