--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
     <div class="container">
-      <h1 class="display-3">Hello, world!</h1>
+      <h1 class="display-4">Once Upon a Time…</h1>
       <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
     </div>
@@ -17,7 +17,7 @@
         <h1 class="font-weight-light">Business Name or Tagline</h1>
         <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
         <a class="btn btn-primary" href="#">Community Guidelines</a>
-        <a class="btn btn-success ml-2" href="#">Start Writing</a>
+        <a class="btn btn-success ml-2" href="<%= new_story_path %>">Start Writing</a>
       </div>
       <!-- /.col-md-4 -->
     </div>
